# qmtcli

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: doc-drift.yml  test.yml
docs/: demo_storyboard.md  xtdata-alignment.md  xttrader-alignment.md
examples/: agent_tool.md  data_call.json  jsonl_server.ps1  order.json
scripts/: check_doc_drift.py  extract_doc_fields.py
src/qmtcli/: __main__.py  cli.py  gateway.py  mcp_server.py  xtdata_fields.json
tests/: test_agent_protocol.py  test_boundaries.py  test_cli_help.py  test_data_commands.py  test_error_envelope.py  test_fields_command.py  test_mcp_server.py  test_output_encoding.py  test_qmt_gateway.py  test_rpc_data_parity.py  test_serialization.py  test_subscribe.py  test_trade_queries.py  test_watch_command.py  test_xtdc.py
